# langchain-document-assistant

./: .env.example  .gitignore  README.md  app.py  app_deepseek.py  app_inmemory.py  pyproject.toml  requirements.txt  streamlit_cloud.py
.devcontainer/: devcontainer.json
components/: __init__.py  ui_components.py
config/: __init__.py  models.py  settings.py
config/prompts/: __init__.py  templates.py
core/: __init__.py  document_processor.py  rag_chain.py  vector_store.py
document_store/pdfs/: wrs healthcare data example questions.txt
src/: app.py  app_deepseek.py  app_inmemory.py
src/agents/: external_sources_lookup_agent.py
src/components/: __init__.py  ui_components.py
src/config/: __init__.py  logging_config.py  models.py  settings.py
src/core/: __init__.py  document_processor.py  rag_chain.py  vector_store.py
src/styles/: streamlit_theme.py
src/tools/: tools.py
styles/: __init__.py
tools/: __init__.py
